nginx for proxying images

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name _;
+    merge_slashes off;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -26,6 +27,56 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    # Media proxy to bypass CORS for encrypted files
+    # Usage: /media-proxy/https://example.com/encrypted-file.png
+    # 
+    # SECURITY:
+    # - HTTPS only (blocks SSRF to internal services, cloud metadata endpoints)
+    # - Size limited (50MB max)
+    # - User approval required on client-side for untrusted domains
+    # 
+    # NOTE: For rate limiting, add to main nginx.conf http block:
+    #   limit_req_zone $binary_remote_addr zone=mediaproxy:10m rate=10r/s;
+    # Then uncomment: limit_req zone=mediaproxy burst=20 nodelay;
+    
+    location ~ ^/media-proxy/(.+)$ {
+        # Capture the target URL first
+        set $target_url $1;
+        
+        # Only allow HTTPS (blocks http://, file://, and SSRF to internal services)
+        if ($target_url !~ "^https://") {
+            return 403;
+        }
+        
+        resolver 8.8.8.8 1.1.1.1 ipv6=off valid=300s;
+        resolver_timeout 5s;
+        
+        # Pass query string through
+        proxy_pass $target_url$is_args$args;
+        proxy_ssl_server_name on;
+        
+        # Strip referrer - some servers reject non-matching referrers
+        proxy_set_header Referer "";
+        
+        # Limit response size (50MB max)
+        proxy_max_temp_file_size 50m;
+        
+        # Add CORS headers to allow browser to read response
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+        
+        # Handle OPTIONS preflight
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
     }
 }
 
