--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tanstack/react-query-persist-client": "^5.90.8",
     "@unhead/addons": "^2.0.10",
     "@unhead/react": "^2.0.10",
+    "blurhash": "^2.0.5",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
