--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "npm i --silent && vite",
     "build": "npm i --silent && vite build -l error && cp dist/index.html dist/404.html && echo 'Project built successfully!'",
     "test": "npm i --silent && npx tsc --noEmit && eslint && vitest run --reporter=dot --silent && vite build -l error && cp dist/index.html dist/404.html && echo 'All tests passed!'",
-    "deploy": "npm run build && npx -y nostr-deploy-cli deploy --skip-setup"
+    "deploy": "npm run build && npx -y nostr-deploy-cli deploy --skip-setup",
+    "postinstall": "if [ -d /nostr-messaging ]; then rm -rf node_modules/@nostr-dm/messaging && mkdir -p node_modules/@nostr-dm && ln -s /nostr-messaging node_modules/@nostr-dm/messaging; fi"
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
     "@getalby/sdk": "^5.1.1",
     "@hookform/resolvers": "^3.9.0",
+    "@samthomson/nostr-messaging": "^0.1.0",
     "@nostrify/nostrify": "^0.47.1",
     "@nostrify/react": "^0.2.17",
     "@radix-ui/react-accordion": "^1.2.0",
