--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm i --silent && vite build -l error && cp dist/index.html dist/404.html && echo 'Project built successfully!'",
     "test": "npm i --silent && npx tsc --noEmit && eslint && vitest run --reporter=dot --silent && vite build -l error && cp dist/index.html dist/404.html && echo 'All tests passed!'",
     "deploy": "npm run build && npx -y nostr-deploy-cli deploy --skip-setup",
-    "postinstall": "if [ -d /nostr-messaging ]; then rm -rf node_modules/@nostr-dm/messaging && mkdir -p node_modules/@nostr-dm && ln -s /nostr-messaging node_modules/@nostr-dm/messaging; fi"
+    "postinstall": "if [ -d ../nostr-messaging ]; then rm -rf node_modules/@samthomson/nostr-messaging && mkdir -p node_modules/@samthomson && ln -s $(pwd)/../nostr-messaging node_modules/@samthomson/nostr-messaging; elif [ -d /nostr-messaging ]; then rm -rf node_modules/@samthomson/nostr-messaging && mkdir -p node_modules/@samthomson && ln -s /nostr-messaging node_modules/@samthomson/nostr-messaging; fi"
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
