play a sound on new message

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ yarn.lock
 # Vercel
 .vercel
 
+# Default sounds (copied from package at postinstall; see README)
+public/sounds/*.mp3
+
 # Secrets
 .env
 .env.*
